Bugfix/popup jumps (#5)
* Fixes bug with pop ups

* adds to db files to .gitignore

---------

--- a/client/src/pages/investments/Investments.module.css
+++ b/client/src/pages/investments/Investments.module.css
@@ -22,5 +22,5 @@
 
 .Assets,
 .AssetClasses {
-	width: 70%;
+	width: 100%;
 }
